test/deprecated/global-unordered-fences.chpl
use UnorderedAtomics;
use UnorderedCopy;

unorderedAtomicFence();
unorderedCopyFence();
